--- a/AlgoLearn/ArrayAndHash/ArrayAndHash.csproj
+++ b/AlgoLearn/ArrayAndHash/ArrayAndHash.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6882952B-EAC7-400A-9F45-DEF984D266AE}</ProjectGuid>
+    <ProjectGuid>{374C565A-9C30-4FAD-97C8-0EC7B5C0E9F5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlgoLearn</RootNamespace>
-    <AssemblyName>AlgoLearn</AssemblyName>
+    <RootNamespace>ArrayAndHash</RootNamespace>
+    <AssemblyName>ArrayAndHash</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,29 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="CountPairWithGivenSum.cs" />
+    <Compile Include="MaxSubarrayForSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Algo\StackAlgo.csproj">
-      <Project>{4fffb11a-1259-47db-b0f0-98ecdfe722fc}</Project>
-      <Name>StackAlgo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ArrayAndHashAlgo\ArrayAndHashAlgo.csproj">
-      <Project>{9465ac8d-c732-4675-9953-9d6b2277ab46}</Project>
-      <Name>ArrayAndHashAlgo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DesignPattern\DesignPattern.csproj">
-      <Project>{1973225b-6e87-43dc-aa0a-a49099a5aa0f}</Project>
-      <Name>DesignPattern</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LinkedListAlgo\LinkedListAlgo.csproj">
-      <Project>{4e7f46d9-8cf5-42cb-bb1b-7f6b6fe4d2c7}</Project>
-      <Name>LinkedListAlgo</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
